--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -17,7 +17,7 @@
           Downtown, Toronto
           ONTARIO
         </div>
-        <div><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>: +416 1234 5678</div>
+        <a class="tel" href="tel:1-416-1234-5678"><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>: +416 1234 5678</a>
         <div><span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>: +416 8765 4321</div>
         <div>
           <a href="mailto:ilfornello@food.net?Subject=Hello" target="_top">
