--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -8,6 +8,11 @@
   padding: 20px;
 }
 
+.tel {
+  color: black;
+  text-decoration: none;
+}
+
 ul {
   list-style-type: none;
   padding-left: 0;
@@ -19,7 +24,7 @@ ul {
   text-align: center;
 }
 
-.center {
+.links {
   display: flex;
   flex-direction: column;
   align-items: center;
