--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -20,7 +20,6 @@ ul {
 
 .copyright {
   margin-top: 15px;
-  margin-bottom: 15px;
   text-align: center;
 }
 
@@ -60,17 +59,16 @@ ul {
 }
 
 .fa {
+  padding: 5px;
+  font-size: 25px;
+  width: 30px;
   text-align: center;
   text-decoration: none;
-  margin: 5px 2px;
-  border-radius: 50%;
-
-  height: 36px;
-  width: 36px;
-  line-height: 36px;
-  font-size: 25px;
 }
 
+.fa:hover {
+  opacity: 0.7;
+}
 .social {
   display: table;
   margin: 0 auto;
