--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,10 @@
 <div class="wrap">
   <app-navbar></app-navbar>
-
   <app-jumbotron></app-jumbotron>
 
-  <div class="container">
+  <main>
     <router-outlet></router-outlet>
-  </div>
+  </main>
 </div>
 
 <app-footer></app-footer>
