--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,49 +1,47 @@
-<div class="container">
-  <div id="footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3 col-xs-6 center">
-          <h4>Links </h4>
-          <ul>
-            <li><a routerLink="/home">Home</a></li>
-            <li><a routerLink="/about">About</a></li>
-            <li><a routerLink="/home#menu">Menu</a></li>
-            <li><a routerLink="/contact">Contact</a></li>
-          </ul>
+<footer class="container">
+  <div class="wrapper">
+    <div class="row">
+      <div class="col-md-3 col-xs-6 center">
+        <h4>Links </h4>
+        <ul>
+          <li><a routerLink="/home">Home</a></li>
+          <li><a routerLink="/about">About</a></li>
+          <li><a routerLink="/home#menu">Menu</a></li>
+          <li><a routerLink="/contact">Contact</a></li>
+        </ul>
+      </div>
+      <div class="col-md-3 col-xs-6">
+        <h4>Our Address</h4>
+        <div>
+          214, King Street West
+          Downtown, Toronto
+          ONTARIO
         </div>
-        <div class="col-md-3 col-xs-6">
-          <h4>Our Address</h4>
-          <div>
-            214, King Street West
-            Downtown, Toronto
-            ONTARIO
-          </div>
-          <a class="tel" href="tel:1-416-1234-5678"><span class="glyphicon glyphicon-earphone"
-                                                          aria-hidden="true"></span>: +416 1234 5678</a>
-          <div><span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>: +416 8765 4321</div>
-          <div>
-            <a href="mailto:ilfornello@food.net?Subject=Hello" target="_top">
-              <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>:
-              ilfornello@food.net
-            </a>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <ul class="social">
-            <li><a href="#"> <i class="fa fa-google"> </i> </a></li>
-            <li><a href="#"> <i class="fa fa-facebook"> </i> </a></li>
-            <li><a href="#"> <i class="fa fa-linkedin"> </i> </a></li>
-            <li><a href="#"> <i class="fa fa-twitter"> </i> </a></li>
-            <li><a href="#"> <i class="fa fa-youtube"> </i> </a></li>
-          </ul>
+        <a class="tel" href="tel:1-416-1234-5678"><span class="glyphicon glyphicon-earphone"
+                                                        aria-hidden="true"></span>: +416 1234 5678</a>
+        <div><span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>: +416 8765 4321</div>
+        <div>
+          <a href="mailto:ilfornello@food.net?Subject=Hello" target="_top">
+            <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>:
+            ilfornello@food.net
+          </a>
         </div>
       </div>
+      <div class="col-md-6">
+        <ul class="social">
+          <li><a href="#"> <i class="fa fa-google"> </i> </a></li>
+          <li><a href="#"> <i class="fa fa-facebook"> </i> </a></li>
+          <li><a href="#"> <i class="fa fa-linkedin"> </i> </a></li>
+          <li><a href="#"> <i class="fa fa-twitter"> </i> </a></li>
+          <li><a href="#"> <i class="fa fa-youtube"> </i> </a></li>
+        </ul>
+      </div>
+    </div>
 
-      <div class="row">
-        <div class="col-md-12 copyright">
-          <div>© Copyright 2015 Ristorante Il Fornello</div>
-        </div>
+    <div class="row">
+      <div class="col-md-12 copyright">
+        <div>© Copyright 2015 Ristorante Il Fornello</div>
       </div>
     </div>
   </div>
-</div>
+</footer>
