--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -3,7 +3,7 @@
   display: block;
 }
 
-.container {
+.wrapper {
   background-color: #AFAFAF;
   padding: 20px;
 }
@@ -69,6 +69,7 @@ ul {
 .fa:hover {
   opacity: 0.7;
 }
+
 .social {
   display: table;
   margin: 0 auto;
