--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,27 +1,39 @@
-<app-card-list>
-  <app-card header="Fichipizza" side="Our Unique Culinary Creations">
-    <ng-template appCardContent>
-      A unique combination of Mediterranean and Italian pizza, topped with Mascarphone, proscuitto, figs, grando
-      panado,
-      honey and arugula.
-    </ng-template>
-  </app-card>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <app-card-list>
+        <app-card header="Fichipizza" side="Our Unique Culinary Creations">
+          <ng-template appCardContent>
+            A unique combination of Mediterranean and Italian pizza, topped with Mascarphone, proscuitto, figs, grando
+            panado,
+            honey and arugula.
+          </ng-template>
+        </app-card>
 
-  <app-card header="Weekend Grand Buffet" side="This Month's Promotions">
-    <ng-template appCardContent>
-      Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main
-      entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person
-    </ng-template>
-  </app-card>
+        <app-card header="Weekend Grand Buffet" side="This Month's Promotions">
+          <ng-template appCardContent>
+            Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six
+            main
+            entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person
+          </ng-template>
+        </app-card>
 
-  <app-card header="Tommy McHugh" side="Meet our Culinary Specialists">
-    <ng-template appCardContent>
-      <h3>Executive Chef</h3>
-      Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in
-      the culinary world, he specializes in creating mouthwatering Mediterranean-Italian experiences.
-    </ng-template>
-  </app-card>
-</app-card-list>
+        <app-card header="Tommy McHugh" side="Meet our Culinary Specialists">
+          <ng-template appCardContent>
+            <h3>Executive Chef</h3>
+            Award winning three-star Michelin chef with wide International experience having worked closely with
+            whos-who in
+            the culinary world, he specializes in creating mouthwatering Mediterranean-Italian experiences.
+          </ng-template>
+        </app-card>
+      </app-card-list>
+    </div>
+  </div>
 
-<app-menu></app-menu>
+  <div class="row">
+    <div class="col-md-12">
+      <app-menu></app-menu>
+    </div>
+  </div>
+</div>
 
