--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,7 +1,9 @@
 .rf-navbar {
   background-color: #2F3BA1;
   color: #9D9D9D;
+  border: 0;
   border-bottom: 2px solid #181E80;
+  border-radius: 0;
   margin-bottom: 0;
 
   .navbar-brand {
