--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,7 +6,7 @@
         <ul>
           <li><a routerLink="/home">Home</a></li>
           <li><a routerLink="/about">About</a></li>
-          <li><a routerLink="/home#menu">Menu</a></li>
+          <li><a routerLink="/home" fragment="menu">Menu</a></li>
           <li><a routerLink="/contact">Contact</a></li>
         </ul>
       </div>
