--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,7 +30,7 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row" fragment="menu" #menu>
     <div class="col-md-12">
       <app-menu></app-menu>
     </div>
